--- a/Views/MenuCategories/Delete.cshtml
+++ b/Views/MenuCategories/Delete.cshtml
@@ -2,34 +2,37 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "Layout_Admin.cshtml";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+
 }
 
-<h1>Delete</h1>
+<div class="my-div">
+    <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>MenuCategory</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Menu)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Menu.Id)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Menus" asp-action="Index">Back to List</a>
-        @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
-    </form>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>MenuCategory</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Menu)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Menu.Id)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-controller="Menus" asp-action="Index">Back to List</a>
+            @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
+        </form>
+    </div>
 </div>
