--- a/Views/MenuCategories/Details.cshtml
+++ b/Views/MenuCategories/Details.cshtml
@@ -2,31 +2,34 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "Layout_Admin.cshtml";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+
 }
 
-<h1>Details</h1>
+<div class="my-div">
+    <h1>Details</h1>
 
-<div>
-    <h4>MenuCategory</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Menu)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Menu.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-controller="Menus" asp-action="Index">Back to List</a>
-    @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
+    <div>
+        <h4>MenuCategory</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Menu)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Menu.Id)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-controller="Menus" asp-action="Index">Back to List</a>
+        @*<a asp-action="Index"  asp-route-id="@Model.MenuId">Back to List</a>*@
+    </div>
 </div>
