--- a/Views/RestaurantInfo/Edit.cshtml
+++ b/Views/RestaurantInfo/Edit.cshtml
@@ -2,41 +2,45 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+
 }
 
-<h1>Edit</h1>
+<div class="my-div">
+    <h1>Edit</h1>
 
-<h4>RestaurantInfo</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Open" class="control-label"></label>
-                <input asp-for="Open" class="form-control" />
-                <span asp-validation-for="Open" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Closed" class="control-label"></label>
-                <input asp-for="Closed" class="form-control" />
-                <span asp-validation-for="Closed" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>RestaurantInfo</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Open" class="control-label"></label>
+                    <input asp-for="Open" class="form-control" />
+                    <span asp-validation-for="Open" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Closed" class="control-label"></label>
+                    <input asp-for="Closed" class="form-control" />
+                    <span asp-validation-for="Closed" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
