--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -31,8 +31,8 @@
                                 <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminRestaurang</a>
                                 <div class="nav-link text-dark dropdown-content">
                                     <a class="dropdown-item" asp-area="" asp-controller="Menus" asp-action="Index">Meny</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="Index">Restaurant Info</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Index">Mina Bokningar</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="Index">Restauranginfo</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Reservations" asp-action="Index">Bokningar</a>
                                     <div class="dropdown-divider"></div>
                                     @*<a class="dropdown-item" href="#">Separated link</a>*@
                                 </div>
