--- a/Views/RestaurantInfo/FullMenu.cshtml
+++ b/Views/RestaurantInfo/FullMenu.cshtml
@@ -2,33 +2,35 @@
 
 @{
     ViewData["Title"] = "FullMenu";
+
 }
 
 
 
+<div class="my-div">
+    <h1>Menu - Restaurang SeaSharp</h1>
 
-<h1>Menu - Restaurang SeaSharp</h1>
 
-
-@foreach (var m in Model)
-{
-    <h3>@Html.DisplayFor(x => m.Name)</h3>
-    @foreach (var mC in m.MenuCategory)
+    @foreach (var m in Model)
     {
-        <h5>@Html.DisplayFor(x => mC.Name)</h5>
-        @foreach (var mI in mC.MenuItems)
+        <h3>@Html.DisplayFor(x => m.Name)</h3>
+        @foreach (var mC in m.MenuCategory)
         {
-            <p style="font-weight:bold;" class="">@Html.DisplayFor(x => mI.Name)</p>
+            <h5>@Html.DisplayFor(x => mC.Name)</h5>
+            @foreach (var mI in mC.MenuItems)
+            {
+                <p style="font-weight:bold;" class="">@Html.DisplayFor(x => mI.Name)</p>
                 <p>
                     @Html.DisplayFor(x => mI.Description)
                 </p>
                 <p>
                     @Html.DisplayFor(x => mI.Allergies)
                 </p>
+            }
         }
+
+
+
+        <hr />
     }
-
-
-
-    <hr />
-}
+</div>
