--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,12 +12,12 @@
     <img class="kund" src="http://193.10.202.77/images/kund.jpg" />
     <p style="text-align: right">Kundservice</p>
     @* HÄR INSERTAS BAKGRUNDSIMAGE *@
-    
 
-        <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: rgba(255,127,80,0.6);
+
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: rgba(255,127,80,0.6);
             width: 100%;">
-                <h1 class="rubrik1">Hotell SeaSharp</h1>
+            <h1 class="rubrik1">Hotell SeaSharp</h1>
 
             <div class="container">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
@@ -40,43 +40,47 @@
                             <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
                         </li>
 
-                            <style>
-                                .dropdown {
-                                    position: relative;
-                                    display: inline-block;
-                                }
+                        <style>
+                            .dropdown {
+                                position: relative;
+                                display: inline-block;
+                            }
 
-                                .dropdown-content {
-                                    display: none;
-                                    position: absolute;
-                                    background-color: #f9f9f9;
-                                    min-width: 160px;
-                                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                                    padding: 12px 16px;
-                                    z-index: 1;
-                                }
+                            .dropdown-content {
+                                display: none;
+                                position: absolute;
+                                background-color: #f9f9f9;
+                                min-width: 160px;
+                                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                                padding: 12px 16px;
+                                z-index: 1;
+                            }
 
-                                .dropdown:hover .dropdown-content {
-                                    display: block;
-                                }
-                            </style>
-                            <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">Restaurang & Aktiviteter</a>
+                            .dropdown:hover .dropdown-content {
+                                display: block;
+                            }
+                        </style>
+                        <li class="dropdown nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">Restaurang & Aktiviteter</a>
 
                             @*<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">testAktiviteter</a>*@
                             <div class="nav-link text-dark dropdown-content">
+                                <p class="dropdown-item">Restaurang</p>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Öppettider</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="FullMenu">Meny</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord</a>
+                                <div class="dropdown-divider"></div>
+                                <p class="dropdown-item">Aktiviteter</p>
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="RestaurantInfo">Restaurant Info</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar **</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetReservations">Reservera bord i restaurangen</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-controller="Admin" asp-action="Index">Logga in som Admin</a>
                             </div>
                         </li>
 
-                           @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på 
-                            @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord 
-                            @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang. 
+                        @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på
+                            @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
+                            @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
                             @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
 
                         <li class="nav-item">
@@ -86,32 +90,32 @@
                             <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
                         </li>
 
-                        </ul>
-                    </div>
+                    </ul>
                 </div>
-            </nav>
-        </header>
-        <div class="container">
-            <main role="main" class="pb-3">
-            
-                    @RenderBody()
-            
-    
-                @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
+            </div>
+        </nav>
+    </header>
+    <div class="container">
+        <main role="main" class="pb-3">
+
+            @RenderBody()
+
+
+            @*<div style="background-image: url('http://193.10.202.77/images/hotelbilden.jpg');">
                     @RenderBody()
                 </div>*@
-            </main>
-        </div>
+        </main>
+    </div>
     @*<img class="bild" src="http://193.10.202.77/images/hotelbilden.jpg" width="1400" height="900" align="middle" margin-left="auto" margin-right="auto" />*@
     <footer class="border-top footer text-muted" style="position:fixed; left:0;bottom:0;">
         <div class="container">
             &copy; 2021 - Hotell SeaSharp - <a asp-area="" asp-controller="Home" asp-action="Index">Till första sidan</a>
         </div>
     </footer>
-    
-    
-    
-    
+
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
