--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="my-div">
     @using (Html.BeginForm())
     {
-        <div class="row">
-            <div class="col-md-4">
+        <div class="row" style="display:flex; align-content:center;">
+            <div class="col-md-12" style="width:fit-content;">
                 <div class="form-group">
                     <label asp-for="Username" class="control-label"></label>
                     <input asp-for="Username" class="form-control" />
