--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -32,12 +32,15 @@ body {
 }
 
 .pop-fixed-box {
-    width:30%;
-    margin:auto;
-    left: unset;
-    top: 45%;
-    background-color: #808080;
-    border: 1px solid black;
+  
+    position:fixed;
+    left:35%;
+    top:30%;
+    width: 30%;
+    margin: auto;
+    background: rgba(255,127,80,1);
+
+    border-radius: 15px;
 }
 
 .pop-box {
@@ -59,6 +62,7 @@ body {
 .toggle-pop {
     display: none;
     border: none;
+    border:none;
 }
 
 /****************************/
